--- a/app/assets/stylesheets/app_kit/base/_tables.scss
+++ b/app/assets/stylesheets/app_kit/base/_tables.scss
@@ -28,6 +28,11 @@ td {
     padding: 5px 15px;
 }
 
+tr.data-row {
+  td {
+    overflow: ellipsis;
+  }
+}
 tr.data-row:hover {
     td {
         background-color: #eee;
