--- a/app/views/app_kit/resources/_filter_panel.html.erb
+++ b/app/views/app_kit/resources/_filter_panel.html.erb
@@ -1,13 +1,11 @@
 <div class="filter-panel">
-<%= search_form_for @q, url: ak_path(filter_resource.model)  do |f| %>
-  <% filter_resource.fields.each do |field|  %>
-    <% if field.name != :name %>
-      <%= f.label field.name, field.display_name %>
-      <%= filter_field f,field, @q  %>
+  <h2>FILTERS</h2>
+  <%= filter_form_for resource do |form| %>
+    <% filter_resource.fields.each do |field| %>
+      <%= form.filter(field) %>
     <% end %>
+    <div class="buttons">
+      <%= form.submit 'Filter Records'%>
+    </div>
   <% end %>
-  <div class="buttons">
-    <%= f.submit 'Filter Records'%>
-  </div>
-<% end %>
 </div>
