Added basic devise support
Added devise gem and implementation for user authentication including
adding user DSL to automatically make users editable.

The user model is created in the AppKit namespace. This required
refactoring of the way models are handled to allow for namespacing in
models

Support is needed for authorization and privlege management still.

--- a/app/assets/stylesheets/app_kit/application.scss
+++ b/app/assets/stylesheets/app_kit/application.scss
@@ -20,6 +20,8 @@ $property-value-color: $base-font-color !default;
 @import "modal";
 @import "pagination";
 @import "datepicker";
+@import "simple";
+@import "flash";
 body {
     padding: 0px;
     margin: 0px;
