Added data formats to resource index pages
Added the as_csv gem for CSV support.
Included download links in index actions to view data in JSON,XML,CSV.

--- a/app/views/app_kit/resources/index.html.erb
+++ b/app/views/app_kit/resources/index.html.erb
@@ -31,6 +31,11 @@
         <% end %>
       </tbody>
     </table>
+    <div class="data-download">
+      <%= link_to 'XML', ak_path(model, :format => :xml) %>
+      <%= link_to 'JSON', ak_path(model, :format => :json) %>
+      <%= link_to 'CSV', ak_path(model, :format => :csv) %>
+    </div>
   </div>
 </div>
 <%= paginate @records, params: { :route_set => :app_kit } %>
