--- a/app/assets/stylesheets/app_kit/resources.css.scss
+++ b/app/assets/stylesheets/app_kit/resources.css.scss
@@ -15,3 +15,19 @@
         }
     }
 }
+.data-download {
+  text-align: right;
+  padding: 10px 20px;
+  font-size: 0.8em;
+  color: #888;
+  a {
+    color: #666;
+    font-weight: bold;
+    display: inline-block;
+    padding: 0px 5px;
+  }
+  a:hover {
+    color: #121212;
+    text-decoration: none;
+  }
+}
