Added installation generator
Installation generator creates an initializer file and a user migration
for initial app setup.

--- a/app/views/app_kit/_nav.html.erb
+++ b/app/views/app_kit/_nav.html.erb
@@ -1,7 +1,7 @@
 <div class="nav-header">
   <div class="application-name">AppKit Test Application</div>
   <div class="user">
-    Logged in as <%= link_to 'Joe', ak_path(current_user) %> (<%= link_to 'logout', app_kit.destroy_user_session_path, :method => :delete %>)
+    <%= link_to 'profile', ak_path(current_user) %> | <%= link_to 'logout', app_kit.destroy_user_session_path, :method => :delete %>
   </div>
 </div>
 <div class="nav">
