--- a/app/assets/stylesheets/app_kit/application.scss
+++ b/app/assets/stylesheets/app_kit/application.scss
@@ -22,6 +22,7 @@ $property-value-color: $base-font-color !default;
 @import "datepicker";
 @import "simple";
 @import "flash";
+@import "footer";
 body {
     padding: 0px;
     margin: 0px;
