--- a/app/assets/stylesheets/app_kit/nav.scss
+++ b/app/assets/stylesheets/app_kit/nav.scss
@@ -15,9 +15,11 @@
     padding-right: 20px;
     a {
       font-weight: bold;
-      color: white;
+      font-size: 0.8em;
+      color: #888;
     }
     a:hover {
+      color: #fff;
       text-decoration: underline;
     }
   }
