--- a/app/views/layouts/app_kit/application.html.erb
+++ b/app/views/layouts/app_kit/application.html.erb
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>AppKit</title>
-  <%= stylesheet_link_tag    "app_kit/application", media: "all" %>
-  <%= javascript_include_tag "app_kit/application" %>
-  <%= csrf_meta_tags %>
+<title>AppKit</title>
+<%= stylesheet_link_tag    "app_kit/application", media: "all" %>
+<%= javascript_include_tag "app_kit/application" %>
+<%= csrf_meta_tags %>
 </head>
 <body>
-    <%= render 'app_kit/nav' %>
-    <div class="page-container">
-        <%= render 'app_kit/breadcrumb' %>
-        <%= yield %>
-    </div>
-
+<%= render 'app_kit/nav' %>
+<div class="page-container">
+  <%= render 'app_kit/breadcrumb' %>
+  <%= yield %>
+</div>
+<%= render 'app_kit/footer' %>
 </body>
 </html>
