Addded scaffolding for dashboard
Added initial scaffolding and objects for dashboard generation

--- a/app/assets/stylesheets/app_kit/resources.css.scss
+++ b/app/assets/stylesheets/app_kit/resources.css.scss
@@ -6,6 +6,7 @@
         }
         .show-actions-column {
             @include span-columns(4);
+            @include pad;
             padding-top: 15px;
             h2 {
                 font-size: 0.8em;
