--- a/app/assets/stylesheets/app_kit/panels.scss
+++ b/app/assets/stylesheets/app_kit/panels.scss
@@ -100,18 +100,19 @@
   ul.links {
     margin-top: 0px;
     li {
-      margin-top: 0px;
+      margin-top: 2px;
       a {
         color: #999;
         display: block;
+        border: 1px solid #eee;
+        padding: 5px 12px;
+        border-radius: 5px;
+        @include linear-gradient(#fff, #f5f5f5);
       }
       a:hover {
-        color: #333;
-      }
-      a:after {
-        padding-left: 5px;
-        font-family: FontAwesome;
-        content: "\f0da";
+        color: #454545;
+        background-color: #f5f5f5;
+        border-color: #ccc;
       }
     }
   }
