--- a/app/views/app_kit/dashboard/show.html.erb
+++ b/app/views/app_kit/dashboard/show.html.erb
@@ -1,2 +1,3 @@
-<h1>Dashboard#show</h1>
-<p>Find me in app/views/app_kit/dashboard/show.html.erb</p>
+<% dashboard.items.each do |item| %>
+  <%= render partial: 'app_kit/table', locals: {item: item} %>
+<% end %>
