Renamed articles to use partial nameing convension.

--- a/source/index.haml
+++ b/source/index.haml
@@ -17,6 +17,6 @@
           %li
             %a{href: '#create-user'} Create a user
   .article-container
-    = partial 'articles/getting_started'
-    = partial 'articles/adding-appkit'
-    = partial 'articles/creating-a-user'
+    = partial 'articles/getting_started.md'
+    = partial 'articles/adding-appkit.md'
+    = partial 'articles/creating-a-user.md'
