Added syntax highlighting
Added font-awesome

Added reference pages

Added tutorial scaffolding INCOMPLETE

--- a/source/_nav.haml
+++ b/source/_nav.haml
@@ -5,7 +5,7 @@
       kit
   %small Advanced data applications in minutes
   %nav
-    %a.active{href: '/'} home
-    %a{href: '/'} dsl
-    %a{href: '/'} tutorial
-    %a{href: '/'} code
+    = nav_link 'home', 'index.html'
+    = nav_link 'reference', 'reference.html'
+    = nav_link 'tutorial', 'tutorial.html'
+    %a{href: 'https://github.com/5Sigma/app_kit/'} code
