--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -4,4 +4,6 @@
     = stylesheet_link_tag 'normalize', 'main'
     = javascript_include_tag 'all'
   %body
+    = partial 'nav'
     = yield
+    = partial 'footer'
