--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -3,6 +3,7 @@
 @import "neat/neat";
 @import 'font-awesome';
 @import "vim";
+@import "landing";
 
 body {
   background: darken($base-background-color, 3);
