Added front logo to main landing cell

--- a/source/index.haml
+++ b/source/index.haml
@@ -14,6 +14,7 @@
   %p
     AppKit builds user ready applications with a number of nice features and an
     attractive interface. Ready to be used out of the box.
+    .image.filter_ss
     .feature-cells
       .feature
         %span.fa-stack.fa-lg
