--- a/source/_nav.haml
+++ b/source/_nav.haml
@@ -5,6 +5,7 @@
       kit
   %small Advanced data applications in minutes
   %nav
+    = nav_link 'home', 'index.html'
     = nav_link 'overview', 'overview.html'
     = nav_link 'reference', 'reference.html'
     = nav_link 'tutorial', 'tutorial.html'
