--- a/app/views/app_kit/_footer.html.erb
+++ b/app/views/app_kit/_footer.html.erb
@@ -1,3 +1,3 @@
 <footer>
- powered by <%= link_to 'appKIT', 'http://appkit.5sigma.io' %>
+ powered by <%= link_to 'appkit', 'http://appkit.5sigma.io' %>
 </footer>
