Added cleanup section to tutorial and corrected a few errors.

--- a/source/index.haml
+++ b/source/index.haml
@@ -84,7 +84,7 @@
       .content
         .title Checkout the tutorial
         %p
-          A quick tutorial to get an app running
+          A quick tutorial to get an app running.
     %a.feature{href: '/overview'}
       %span.fa-stack.fa-lg
         %i.fa.fa-square-o.fa-stack-2x
@@ -92,7 +92,7 @@
       .content
         .title Documentation
         %p
-          View the documentation and refference
+          View the documentation and refference.
     %a.feature{href: 'https://github.com/5Sigma/app_kit/'}
       %span.fa-stack.fa-lg
         %i.fa.fa-square-o.fa-stack-2x
@@ -100,4 +100,4 @@
       .content
         .title Get the code
         %p
-          View the documentation and refference
+          Get the sourcecode from Github.
