--- a/source/reference.haml
+++ b/source/reference.haml
@@ -2,7 +2,7 @@
   .side-nav
     %ul
       %li
-        %a{:name => 'configuration'} Configuration
+        %a{:name => '#configuration'} Configuration
         %ul
           %li
             %a{:href => '#dashboard'} Dashboard
