--- a/source/tutorial.haml
+++ b/source/tutorial.haml
@@ -15,7 +15,12 @@
           %li
             %a{:href => '#invoice-item-resource'} Invoice item resource
       %li
-        %a{:href => '#user'} Creating a user 
+        %a{:href => '#user'} Creating a user
+      %li
+        %a{href: '#improvements'} Cleanin up
+        %ul
+          %li
+            %a{href: '#model-display-text'} Model display text
 
 
   .article-container
